Add directory recipes and files, change the index
New directory recipes, new file and change the index file.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <!-- First recipes -->
+        <a href="./recipes/sloppyjoes.html">Sloppy Joes</a>
     </body>
 </html>
