Add new html file, add links, images, and content

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
         <h1>Odin Recipes</h1>
         <!-- First recipes -->
         <a href="./recipes/sloppyjoes.html">Sloppy Joes</a>
+        <!-- Second recipes -->
+        <a href="./recipes/pastasalad.html">Pasta Salad</a>
     </body>
 </html>
