Change the index page
Put all links in an unordered list

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
         <!-- First recipes -->
-        <a href="./recipes/sloppyjoes.html">Sloppy Joes</a>
+            <li><a href="./recipes/sloppyjoes.html">Sloppy Joes</a></li>
         <!-- Second recipes -->
-        <a href="./recipes/pastasalad.html">Pasta Salad</a>
+            <li><a href="./recipes/pastasalad.html">Pasta Salad</a></li>
         <!-- Third recipes -->
-        <a href="./recipes/tomatosoup.html">Tomato Soup</a>
+            <li><a href="./recipes/tomatosoup.html">Tomato Soup</a></li>
+        </ul>
     </body>
 </html>
